--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
 </head>
 <style>
-     .main{
+     .main {
           display: flex;
           align-items: center;
           justify-content: center;
           flex-direction: column;
           line-height: 2vw;
+          margin-top: 6%;
+          height: 30vw;
+          border-radius: 2vw;
+          gap: 1vw;
+          width: 50vw;
+          margin-left: 25%;
+          background-color: bisque;
      }
-     button{
+
+     a {
+          color: black;
+     }
+
+     button a{
+          color: #fff;
+          text-decoration: none
+     }
+     button {
           margin-top: 1.1vw;
           height: 3vw;
           font-size: 1.1vw;
@@ -23,31 +40,32 @@
           border: none;
           border-radius: 2vw;
      }
-     
 </style>
+
 <body>
      <div class="main">
           <h1>Set a new Reminder</h1>
-          <form action="/add" method="post" autocomplete="off">
+          <form action="/:_id/add" method="post" autocomplete="off">
                Select a date : <input type="date" name="date" required><br>
                <!-- <h3>Subject</h3> -->
                Subject: <select name="subject" id="">
-                    <option value="1">Urgent Task</option>
-                    <option value="1">Profisional Work</option>
-                    <option value="1">Persnal Work</option>
+                    <option value="Urgent Task">Urgent Task</option>
+                    <option value="Profisional Work">Profisional Work</option>
+                    <option value="Persnal Work">Persnal Work</option>
                </select><br>
                Add Discription <textarea name="textarea" required></textarea> <br>
                Email <input type="email" name="email" required> <br>
                Mobile Number <input type="text" name="mobile"><br>
                SMS Number <input type="text" name="sms"><br>
-               Recur for next<input type="radio" name="days">7 days
-               <input type="radio" name="days">5 days
-               <input type="radio" name="days">3 days
-               <input type="radio" name="days">2  days <br>
+               Recur for next<input type="radio" value="7 dyas" name="days">7 days
+               <input type="radio" value="5 days" name="days">5 days
+               <input type="radio" value="3 dyas" name="days">3 days
+               <input type="radio" name="days">2 days <br>
                <button>Confirm</button>
                <button><a href="/profile">Back</a></button>
                <a id="pro" href="logout">LogOut</a>
           </form>
      </div>
 </body>
+
 </html>
