--- a/views/update.ejs
+++ b/views/update.ejs
@@ -9,12 +9,18 @@
      .main{
           display: flex;
           align-items: center;
+          background-color: bisque;
           justify-content: center;
           flex-direction: column;
           line-height: 2vw;
+          width: 60%;
+          margin-left: 20%;
+          margin-top: 10%;
+          height: 30vw;
      }
      button{
           margin-top: 1.1vw;
+          cursor: pointer;
           height: 3vw;
           font-size: 1.1vw;
           width: 10vw;
@@ -23,27 +29,31 @@
           border: none;
           border-radius: 2vw;
      }
+     button a{
+          color: #fff;
+          text-decoration: none;
+     }
      
 </style>
 <body>
      <div class="main">
-          <h1>Set a new Reminder</h1>
-          <form action="/add" method="post" autocomplete="off">
+          <h1>Update Reminder</h1>
+          <form action="/:-id/update" method="post" autocomplete="off">
                Select a date : <input type="date" name="date" required><br>
                <!-- <h3>Subject</h3> -->
                Subject: <select name="subject" id="">
-                    <option value="1">Urgent Task</option>
-                    <option value="1">Profisional Work</option>
-                    <option value="1">Persnal Work</option>
+                    <option value="Urgent Task">Urgent Task</option>
+                    <option value="Profisional Work">Profisional Work</option>
+                    <option value="Persnal Work">Persnal Work</option>
                </select><br>
-               Add Discription <textarea name="textarea" required></textarea> <br>
+               Add Discription <textarea name="textarea"></textarea> <br>
                Email <input type="email" name="email" required> <br>
-               Mobile Number <input type="text" name="mobile"><br>
+               Mobile Number <input type="text" name="mobile" required><br>
                SMS Number <input type="text" name="sms"><br>
-               Recur for next<input type="radio" name="days">7 days
-               <input type="radio" name="days">5 days
-               <input type="radio" name="days">3 days
-               <input type="radio" name="days">2  days <br>
+               Recur for next<input type="radio" value="7 days" name="days">7 days
+               <input type="radio" value="5 days" name="days">5 days
+               <input type="radio" value="3 days" name="days">3 days
+               <input type="radio" value="2 days" name="days">2  days <br>
                <button>Confirm</button>
                <button><a href="/profile">Back</a></button>
                <a id="pro" href="logout">LogOut</a>
