--- a/views/add.ejs
+++ b/views/add.ejs
@@ -45,7 +45,7 @@
 <body>
      <div class="main">
           <h1>Set a new Reminder</h1>
-          <form action="/:_id/add" method="post" autocomplete="off">
+          <form action="/add" method="post" autocomplete="off">
                Select a date : <input type="date" name="date" required><br>
                <!-- <h3>Subject</h3> -->
                Subject: <select name="subject" id="">
